--- a/codefresh.yml
+++ b/codefresh.yml
@@ -16,7 +16,7 @@ steps:
     composition-candidates:
       web:
           image: 'noamt/djanga:master'
-          command: 'exit 0'
+          command: bash -c 'exit 0'
           ports:
             - '8000'
           links:
