--- a/codefresh.yml
+++ b/codefresh.yml
@@ -6,21 +6,21 @@ steps:
     image-name: noamt/djanga
     tag: ${{CF_SHORT_REVISION}}
   
-  cf-comp:
-    type: composition
-    composition:
-      version: '2'
-      services:
-        db:
-          image: postgres
-    composition-candidates:
-      web:
-          image: 'noamt/djanga:master'
-          command: bash -c 'exit 1'
-          ports:
-            - '8000'
-          links:
-            - db
+  #cf-comp:
+  #  type: composition
+  #  composition:
+  #    version: '2'
+  #    services:
+  #      db:
+  #        image: postgres
+  #  composition-candidates:
+  #    web:
+  #        image: 'noamt/djanga:master'
+  #        command: bash -c 'exit 1'
+  #        ports:
+  #          - '8000'
+  #        links:
+  #          - db
   
   push-dockerhub:
     type: push
