--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,14 +3,14 @@ version: '1.0'
 steps:
   create_file:
     image: alpine:latest
-    working-directory: /codefresh/volume
+    working-directory: /
     commands:
       - touch jim
       - echo "moo" >> jim
    
   read_file:
     image: alpine:latest
-    working-directory: /codefresh/volume
+    working-directory: /
     commands:
       - echo "reading jimmmmm#############:"
       - echo jim
