--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,17 +1,18 @@
 version: '1.0'
 
 steps:
-  create_file:
-    image: alpine:latest
-    working-directory: /
-    commands:
-      - touch jim
-      - echo "moo" >> jim
+  #create_file:
+  #  image: alpine:latest
+  #  working-directory: /
+  #  commands:
+  #    - touch jim
+  #    - echo "moo" >> jim
    
   read_file:
     image: alpine:latest
     working-directory: /
     commands:
+      - pwd
       - echo "reading jimmmmm#############:"
       - echo jim
   #build-djanga:
