--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,7 +2,7 @@ version: '1.0'
 
 steps:
   create_file:
-    #image: alpine:latest
+    image: alpine:latest
     working-directory: /codefresh/volume
     commands:
       - touch jim
