--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,7 +3,7 @@ version: '1.0'
 steps:
   create_file:
     image: alpine:latest
-    working-directory: /codefresh/volume
+    working_directory: /codefresh/volume
     commands:
       - touch jim
       - echo "moo" >> jim
