--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,7 +2,7 @@ version: '1.0'
 
 steps:
   create_file:
-    image: 
+    image
     #alpine:latest
     #working_directory: /codefresh/volume
     #commands:
