--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,21 +1,7 @@
 version: '1.0'
 
 steps:
-  composition_step:
-      description: Attempting to run as part of composition.
-      type: composition
-      composition:
-        version: '2'
-        services:
-          app:
-            image: 'advance512demo/demochat:master'
-            ports:
-              - 5000
-            depends_on:
-              - mongo
-          mongo:
-            image: mongo
-      composition-candidates:
-        main:
-          image: nhoag/curl
-          command: bash -c "sleep 20 && curl http://app:5000/" | echo 'works'
+   entry:
+     image: alpine:latest
+     entry-point:
+       - echo "jim"
