--- a/codefresh.yml
+++ b/codefresh.yml
@@ -4,7 +4,8 @@ steps:
    something_or_another:
      image: gcr.io/codefresh-production/atom---website-builder:58a3f6f371010598fe370d6a8aed37ebe9b5f201
      commands :
-       - webpack -p
-       - ./deploy.sh $CF_BRANCH
+       - pwd
+       #- webpack -p
+       #- ./deploy.sh $CF_BRANCH
 
 
