--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,7 +3,7 @@ version: '1.0'
 steps:
    buildit:
      type: build
-     image-name: noamt/djanga-testable
+     image_name: noamt/djanga-testable
    
    something_or_another:
      image: ${{buildit}}
