--- a/codefresh.yml
+++ b/codefresh.yml
@@ -4,3 +4,6 @@ steps:
    comp:
      type: launch-composition
      composition: bamigrash
+     docker_machine:
+       create:
+         provider: amazon
