--- a/codefresh-advanced.yml
+++ b/codefresh-advanced.yml
@@ -22,6 +22,7 @@ steps:
   push_the_image:
     type: push
     candidate: ${{build_the_image}}
+    tag: latest
     on_success:
       metadata:
         set:
